--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  hive: ^1.4.4+1
+  path_provider: ^1.6.18
   simple_vcard_parser: ^0.1.3
   url_launcher: ^5.7.2
   wifi_iot: ^0.1.1
