--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  barcode_widget: ^1.5.0
   animations: ^1.1.2
   hive: ^1.4.4+1
   path_provider: ^1.6.18
