--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="qrscan"
+        android:label="QR Scan"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
