--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,15 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.4
+version: 0.0.5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  share: ^0.6.5+2
+  permission_handler: ^5.0.1+1
+  barcode_image: ^1.2.0
   barcode_widget: ^1.5.0
   animations: ^1.1.2
   hive: ^1.4.4+1
